Bug 825785 cprDestroyThread on Windows should kill thread immediately r=jesup